# JS8Call-improved

./: CMakeLists.txt
.github/workflows/: build-caches.yml.old  build-docs.yml  ci-linux.yml  ci-linux.yml.old  ci-macos.yml  ci-windows.yml  release-windows.yml  workflow-cleanup.yml
.github/workflows/scripts/: ci-windows-installer.iss
JS8_Audio/: SoundInput.cpp  SoundOutput.cpp
JS8_Main/: CPlotter.h  CandidateKeyFilter.cpp  FrequencyLineEdit.cpp  FrequencyList.cpp  IARURegions.h  MetaDataRegistry.cpp  Modes.h  Radio.cpp  RadioMetaType.cpp  StationList.cpp  Varicode.cpp  main.cpp  qt_helpers.h
JS8_Mainwindow/: UI_Constructor.cpp  buildQueryMenu.cpp  confirmThenEnqueueMessage.cpp  displayCallActivity.cpp  processCommandActivity.cpp  processDecodeEvent.cpp  timeSyncBatch.cpp
JS8_Transceiver/: HRDTransceiver.cpp  HamlibTransceiver.cpp  Transceiver.h  TransceiverFactory.h
JS8_UDP/: NetworkMessage.cpp  NetworkMessage.h  WSJTXMessageClient.cpp
JS8_UI/: Configuration.cpp  Configuration.h  LogQSO.cpp  WF.cpp  WF.h  WideGraph.cpp  WideGraph.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
JS8_Widgets/: LazyFillComboBox.h
docs/: build_for_Linux.md  build_for_MacOS.md  build_for_Windows.md
tools/: Debian-build-deb.sh  Debian_build_deb.sh  INSTALL_JS8Call-improved_Debian.sh  INSTALL_JS8Call-improved_Fedora.sh  JS8Call-Build-AppImage.sh  Linux-Build-JS8Call.sh  Linux-Dist_pkg_Qt6.sh  Linux-ScriptBuild-Qt6.sh  Linux-TestBuild-Qt6.sh  Linux-User-Build-JS8Call.sh
